# coderev

./: .gitignore  BENCHMARK.md  Cargo.toml  LICENSE  README.md  SKILLS.md  coderev.db  coderev.toml  install.ps1  install.sh  test_tabled.rs
.github/workflows/: release.yml
Formula/: coderev.rb
bench/: .rag_payload.json  REPORT.md  qa_eval.py  queries.json  rag_retrieval.py  report.py  run_all.sh  run_coderev.sh  run_qa.sh  run_rag.sh  run_rg.sh
docs/: architecture.md  cli-reference.md  getting-started.md  launch.md  mcp-guide.md  positioning.md
py/: main.py
queries/: go.scm  javascript.scm  python.scm  rust.scm
src/: commands.rs  config.rs  edge.rs  graph.rs  ignore.rs  lib.rs  main.rs  output.rs  symbol.rs  uri.rs
src/adapter/: chunker.rs  framework.rs  javascript.rs  mod.rs  python.rs  query_adapter.rs
src/linker/: global_linker.rs  mod.rs  semantic_linker.rs
src/query/: embedding.rs  engine.rs  mod.rs  resolver.rs
src/scope/: graph.rs  mod.rs  resolver.rs
src/server/: mcp.rs  mod.rs  routes.rs
src/storage/: mod.rs  schema.rs  sqlite.rs
src/ui/: icons.rs  mod.rs  output.rs  progress.rs  progress_message.rs  table.rs  theme.rs
src/watcher/: mod.rs
test_ambiguous/src/: main.rs  math.rs  string.rs
test_project/src/: main.rs
ui/: README.md  package.json  pnpm-lock.yaml
ui/src/lib/: api.ts  explore.svelte.ts  graph.svelte.ts  types.ts
ui/src/lib/components/: ForceGraph3D.svelte  GraphCanvas.svelte  TracePanel.svelte
ui/src/routes/: +page.svelte  layout.css
ui/src/routes/explore/: +page.svelte
