[package]
name = "coderev"
version = "0.1.0"
edition = "2024"
description = "Universal Code Intelligence Substrate - Language-agnostic AST-native semantic code graph"
license = "MIT"

[[bin]]
name = "coderev"
path = "src/main.rs"

[lib]
name = "coderev"
path = "src/lib.rs"

[dependencies]
# Tree-sitter core & languages
tree-sitter = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }

# Embeddings & Search
fastembed = "4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# CLI
clap = { version = "4.5", features = ["derive"] }

# UI - Beautiful terminal output
indicatif = "0.17"
console = "0.15"
tabled = "0.16"
owo-colors = "4"

# Concurrency for progress updates
crossbeam = "0.8"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
ignore = "0.4"
glob = "0.3"
regex = "1.11"
tree-sitter-rust = "0.23"
tree-sitter-go = "0.23"
blake3 = "1.8.3"
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs", "cors", "trace"] }
mcp-sdk-rs = "0.3.4"
notify = "8.0.0"
async-trait = "0.1"
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3.14"

[profile.release]
lto = true
codegen-units = 1
